--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,25 +11,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Change working directory
+        run: cd server-assignment-001
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
       - name: Install dependencies
+        working-directory: ./server-assignment-001
         run: npm install
 
-      - name: Run ESLint
-        run: npm run lint
-
-      - name: Run Prettier
-        run: npm run prettier -- --check
-
       - name: Run Tests
-        env:
-          CI: true
-        run: npm run test
-
-      - name: Build
-        run: npm run build
+        working-directory: ./server-assignment-001
+        run: npm test
 
