Update test script to run app.js in CI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Node.js test project for CI",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"CI Test Passed ✅\" && exit 0"
+    "test": "node app.js"
   },
   "license": "MIT"
 }
